# dcolor

./: .gitignore  README.md  pyproject.toml
dcolor/: __init__.py  color_maps.py  dcolor.py  hsvcolor.py  rgbcolor.py
examples/: dcolorExample.py  example.py  hsvcolorExample.py  magExample.py  rgbcolorExample.py  rgbcolorExampleExpand.py
tools/: make_examples.py
