[tool.poetry]
name = "dcolor"
version = "0.1.0"
description = "Domain coloring using numpy and matplotlib"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = "^3.9.1"
numpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
